--- a/src/layout/l-features-wrapper/l-features-wrapper.scss
+++ b/src/layout/l-features-wrapper/l-features-wrapper.scss
@@ -1,4 +1,4 @@
-.services__items-wrapper {
+.l-features-wrapper {
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -6,7 +6,7 @@
 }
 
 @media all and (min-width: 975px) {
-    .services__items-wrapper {
+    .l-features-wrapper {
         flex-direction: row;
         width: 940px;
         height: 180px;
