--- a/src/layout/l-section/__wrapper/l-section__wrapper.scss
+++ b/src/layout/l-section/__wrapper/l-section__wrapper.scss
@@ -1,7 +1,7 @@
-.item {
+.l-section__wrapper {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    margin-top: 40px;
-    margin-bottom: 40px;
+    align-items: center;
+    text-align: center;
 }
