Remove redundant section wrapper

--- a/src/layout/l-section/l-section.scss
+++ b/src/layout/l-section/l-section.scss
@@ -1,6 +1,7 @@
-l-section { 
-    width: 100%;
+.l-section { 
     display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     align-items: center;
-    justify-content: center;
+    text-align: center;
 }
