--- a/static/main.css
+++ b/static/main.css
@@ -45,11 +45,12 @@
   2# LAYOUT start ######################################################
 \************************************************************************/
 /* l-section  ---------------------------------------------------- */
-l-section {
-  width: 100%;
+.l-section {
   display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center; }
+  text-align: center; }
 
 /* >> l-section--contact -------------------------------------------------- */
 .l-section--contact {
