--- a/static/main.css
+++ b/static/main.css
@@ -52,6 +52,26 @@
   align-items: center;
   text-align: center; }
 
+/* >> l-section--banner -------------------------------------------------- */
+.l-section--banner {
+  margin-top: 113px;
+  background: url("../img/banner/background.png");
+  background-size: cover;
+  position: relative; }
+
+.l-section--banner::before {
+  content: "";
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.75);
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1; }
+
+@media screen and (max-device-width: 900px) and (orientation: landscape) {
+  .l-section--banner {
+    margin-top: 50px; } }
 /* >> l-section--contact -------------------------------------------------- */
 .l-section--contact {
   background-color: #7cc576; }
