--- a/src/layout/l-section/__content-wrapper/l-section__content-wrapper.scss
+++ b/src/layout/l-section/__content-wrapper/l-section__content-wrapper.scss
@@ -2,3 +2,7 @@
     width: 940px;
     margin: 100px auto 100px auto;
 }
+
+.l-section--banner .l-section__content-wrapper {
+    margin: 120px auto 120px auto;
+}
