--- a/src/blocks/heading/__subtitle/heading__subtitle.scss
+++ b/src/blocks/heading/__subtitle/heading__subtitle.scss
@@ -2,4 +2,9 @@
     font-family: 'Roboto Slab', serif;
     font-size: 20px;
     color: #777777;
+    margin-bottom: 90px;
+}
+
+.l-section--banner .heading__subtitle {
+    margin-bottom: 60px;
 }
