--- a/src/main.scss
+++ b/src/main.scss
@@ -35,6 +35,8 @@
 @import "layout/l-section/l-section.scss"; 
 /* >> l-section--banner -------------------------------------------------- */
     @import "layout/l-section/--banner/l-section--banner.scss";
+/* >> l-section--shade -------------------------------------------------- */
+    @import "layout/l-section/--shade/l-section--shade.scss";
 /* >> l-section--contact -------------------------------------------------- */
     @import "layout/l-section/--contact/l-section--contact.scss";
 /* >> l-section--top-footer -------------------------------------------------- */
