--- a/src/layout/l-section/--banner/l-section--banner.scss
+++ b/src/layout/l-section/--banner/l-section--banner.scss
@@ -3,6 +3,7 @@
     background: url("../img/banner/background.png");
     background-size: cover;
     position: relative;
+    height: 530px;
 }
 
 .l-section--banner::before {
@@ -13,7 +14,6 @@
     position: absolute;
     top: 0;
     left: 0;
-    z-index: -1;
 }
 
 @media screen and (max-device-width: 900px) and (orientation: landscape) {
