--- a/static/main.css
+++ b/static/main.css
@@ -57,7 +57,8 @@
   margin-top: 113px;
   background: url("../img/banner/background.png");
   background-size: cover;
-  position: relative; }
+  position: relative;
+  height: 530px; }
 
 .l-section--banner::before {
   content: "";
@@ -66,8 +67,7 @@
   background-color: rgba(0, 0, 0, 0.75);
   position: absolute;
   top: 0;
-  left: 0;
-  z-index: -1; }
+  left: 0; }
 
 @media screen and (max-device-width: 900px) and (orientation: landscape) {
   .l-section--banner {
@@ -86,8 +86,10 @@
 
 /* __ l-section__content-wrapper -------------------------------------------------- */
 .l-section__content-wrapper {
-  width: 940px;
-  margin: 100px auto 100px auto; }
+  width: 100%;
+  max-width: 940px;
+  margin: 100px auto 100px auto;
+  z-index: 2; }
 
 .l-section--banner .l-section__content-wrapper {
   margin: 120px auto 120px auto; }
@@ -303,8 +305,7 @@
   font-weight: 100;
   text-shadow: 0 1px 1px rgba(0, 0, 0, 0.7);
   letter-spacing: -1px;
-  cursor: pointer;
-  z-index: 2; }
+  cursor: pointer; }
 
 .button::before {
   content: "";
