Set banner height to whole screen

--- a/src/layout/l-section/--banner/l-section--banner.scss
+++ b/src/layout/l-section/--banner/l-section--banner.scss
@@ -3,7 +3,7 @@
     background: url("../img/banner/background.png");
     background-size: cover;
     position: relative;
-    height: 530px;
+    height: calc(100vh - 113px);
 }
 
 
