--- a/static/main.css
+++ b/static/main.css
@@ -58,7 +58,7 @@
   background: url("../img/banner/background.png");
   background-size: cover;
   position: relative;
-  height: 530px; }
+  height: calc(100vh - 113px); }
 
 .l-section--banner::before {
   content: "";
@@ -92,7 +92,12 @@
   z-index: 1; }
 
 .l-section--banner .l-section__content-wrapper {
-  margin: 120px auto 120px auto; }
+  margin: 120px auto 120px auto;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center; }
 
 /* l-features-wrapper ---------------------------------------------------- */
 .l-features-wrapper {
