--- a/src/layout/l-section/--banner/l-section--banner.scss
+++ b/src/layout/l-section/--banner/l-section--banner.scss
@@ -2,6 +2,7 @@
     margin-top: 113px;
     background: url("../img/banner/background.png");
     background-size: cover;
+    background-position: center;
     position: relative;
     height: calc(100vh - 113px);
 }
