Remove 100vh from content-wrapper

--- a/static/main.css
+++ b/static/main.css
@@ -93,8 +93,7 @@
   z-index: 1; }
 
 .l-section--banner .l-section__content-wrapper {
-  margin: 120px auto 120px auto;
-  height: 100vh; }
+  margin: 120px auto 120px auto; }
 
 /* l-features-wrapper ---------------------------------------------------- */
 .l-features-wrapper {
