--- a/static/main.css
+++ b/static/main.css
@@ -93,8 +93,8 @@
   z-index: 1; }
 
 .l-section--banner .l-section__content-wrapper {
-  height: calc(100vh / 2);
-  margin: 50% auto auto auto; }
+  height: 100%;
+  margin: 0 auto 0 auto; }
 
 /* l-features-wrapper ---------------------------------------------------- */
 .l-features-wrapper {
