--- a/static/main.css
+++ b/static/main.css
@@ -59,7 +59,7 @@
   background-size: cover;
   background-position: center;
   position: relative;
-  height: calc(100vh - 113px); }
+  height: 100vh; }
 
 .l-section--banner::before {
   content: "";
