--- a/src/layout/l-section/--banner/l-section--banner.scss
+++ b/src/layout/l-section/--banner/l-section--banner.scss
@@ -4,7 +4,7 @@
     background-size: cover;
     background-position: center;
     position: relative;
-    height: 100vh;
+    height: calc(100vh - 113px);
 }
 
 
