Test with bg-size: unset

--- a/src/layout/l-section/--banner/l-section--banner.scss
+++ b/src/layout/l-section/--banner/l-section--banner.scss
@@ -1,7 +1,7 @@
 .l-section--banner {
     margin-top: 113px;
     background: url("../img/banner/background.png");
-    background-size: cover;
+    background-size: unset;
     background-position: bottom;
     position: relative;
     height: calc(100vh - 113px);
