--- a/static/main.css
+++ b/static/main.css
@@ -56,7 +56,7 @@
 .l-section--banner {
   margin-top: 113px;
   background: url("../img/banner/background.png");
-  background-size: unset;
+  background-size: 1600px;
   background-position: bottom;
   position: relative;
   height: calc(100vh - 113px); }
