--- a/static/main.css
+++ b/static/main.css
@@ -54,12 +54,12 @@
 
 /* >> l-section--banner -------------------------------------------------- */
 .l-section--banner {
-  margin-top: 113px;
+  margin-top: 90px;
   background: url("../img/banner/background.png");
-  background-size: 1600px;
+  background-size: contain;
   background-position: bottom;
   position: relative;
-  height: calc(100vh - 113px); }
+  height: 600px; }
 
 .l-section--banner::before {
   content: "";
@@ -129,7 +129,7 @@
 .header__wrapper {
   width: 100%;
   max-width: 940px;
-  height: 113px;
+  height: 90px;
   margin: 0 auto 0 auto;
   display: flex;
   align-items: center;
