Set background and section positioning

--- a/src/layout/l-section/--banner/l-section--banner.scss
+++ b/src/layout/l-section/--banner/l-section--banner.scss
@@ -1,8 +1,8 @@
 .l-section--banner {
     margin-top: 90px;
     background: url("../img/banner/background.png");
-    background-size: contain;
-    background-position: bottom;
+    background-size: cover;
+    background-position: right;
     position: relative;
     height: 600px;
 }
