--- a/src/layout/l-section/l-section.scss
+++ b/src/layout/l-section/l-section.scss
@@ -1,7 +1,7 @@
 .l-section { 
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     text-align: center;
 }
