Style Offer section

--- a/src/main.scss
+++ b/src/main.scss
@@ -35,6 +35,8 @@
 @import "layout/l-section/l-section.scss"; 
 /* >> l-section--banner -------------------------------------------------- */
     @import "layout/l-section/--banner/l-section--banner.scss";
+/* >> l-section--offer -------------------------------------------------- */
+    @import "layout/l-section/--offer/l-section--offer.scss";
 /* >> l-section--shade -------------------------------------------------- */
     @import "layout/l-section/--background_light/l-section--background_light.scss";
 /* >> l-section--top-footer -------------------------------------------------- */
