--- a/static/main.css
+++ b/static/main.css
@@ -73,6 +73,27 @@
 @media screen and (max-device-width: 900px) and (orientation: landscape) {
   .l-section--banner {
     margin-top: 50px; } }
+/* >> l-section--offer -------------------------------------------------- */
+.l-section--offer {
+  margin-top: 80px;
+  background: url("../img/offer/background.png");
+  background-size: cover;
+  background-position: right;
+  position: relative;
+  height: 550px; }
+
+.l-section--offer::before {
+  content: "";
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.75);
+  position: absolute;
+  top: 0;
+  left: 0; }
+
+@media screen and (max-device-width: 900px) and (orientation: landscape) {
+  .l-section--offer {
+    margin-top: 50px; } }
 /* >> l-section--shade -------------------------------------------------- */
 .l-section--background_light {
   background-color: #f9f9f9; }
