Change section wrapper margin

--- a/src/layout/l-section/__content-wrapper/l-section__content-wrapper.scss
+++ b/src/layout/l-section/__content-wrapper/l-section__content-wrapper.scss
@@ -1,10 +1,6 @@
 .l-section__content-wrapper {
     width: 100%;
     max-width: 940px;
-    margin: 100px auto 100px auto;
+    margin: 50px auto;
     z-index: 1;
-}
-
-.l-section--banner .l-section__content-wrapper {
-    margin: 0 auto 0 auto;
 }
