--- a/static/main.css
+++ b/static/main.css
@@ -110,11 +110,8 @@
 .l-section__content-wrapper {
   width: 100%;
   max-width: 940px;
-  margin: 100px auto 100px auto;
+  margin: 50px auto;
   z-index: 1; }
-
-.l-section--banner .l-section__content-wrapper {
-  margin: 0 auto 0 auto; }
 
 /* l-features-wrapper ---------------------------------------------------- */
 .l-features-wrapper {
