--- a/src/blocks/feature/feature.scss
+++ b/src/blocks/feature/feature.scss
@@ -2,4 +2,9 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    margin-top: 50px;
+}
+
+.feature:first-child {
+    margin-top: 0;
 }
