Style green text

--- a/static/main.css
+++ b/static/main.css
@@ -35,6 +35,9 @@
   color: #222222;
   background: #7cc576; }
 
+.green-text {
+  color: #7cc576; }
+
 /************************************************************************\
   # SETTINGS --- Global end ----------------------------------------------
 \************************************************************************/
@@ -308,6 +311,8 @@
 
 /* list ---------------------------------------------------- */
 .list {
+  font-family: 'Roboto Slab', serif;
+  color: #777777;
   margin-left: 50px;
   list-style-image: url("../img/offer/circle-checkmark.svg"); }
 
