--- a/src/blocks/list/list.scss
+++ b/src/blocks/list/list.scss
@@ -1,4 +1,6 @@
 .list {
+    font-family: 'Roboto Slab', serif;
+    color: #777777;
     margin-left: 50px;
     list-style-image: url("../img/offer/circle-checkmark.svg");
 }
