Style offer section

--- a/src/blocks/heading/__subtitle/heading__subtitle.scss
+++ b/src/blocks/heading/__subtitle/heading__subtitle.scss
@@ -2,9 +2,13 @@
     font-family: 'Roboto Slab', serif;
     font-size: 20px;
     color: #777777;
-    margin-bottom: 80px;
+    margin-bottom: 60px;
 }
 
 .l-section--banner .heading__subtitle {
     margin-bottom: 60px;
+}
+
+.l-section--offer .heading__subtitle {
+    margin-bottom: 20px;
 }
