--- a/src/layout/l-section/--offer/l-section--offer.scss
+++ b/src/layout/l-section/--offer/l-section--offer.scss
@@ -3,7 +3,8 @@
     background-size: cover;
     background-position: right;
     position: relative;
-    height: 550px;
+    height: 600px;
+    text-align: left;
 }
 
 
