--- a/src/layout/l-section/__content-wrapper/l-section__content-wrapper.scss
+++ b/src/layout/l-section/__content-wrapper/l-section__content-wrapper.scss
@@ -4,3 +4,8 @@
     margin: 50px auto;
     z-index: 1;
 }
+
+.l-section--offer .l-section__content-wrapper {
+    margin-left: 10%;
+    width: 90%;
+}
