--- a/src/main.scss
+++ b/src/main.scss
@@ -103,7 +103,8 @@
 
 /* list ---------------------------------------------------- */
     @import "blocks/list/list.scss"; 
-
+/* __ list__item -------------------------------------------------- */
+        @import "blocks/list/__item/list__item.scss";
 
 /* button  ---------------------------------------------------- */
     @import "blocks/button/button.scss"; 
