--- a/static/main.css
+++ b/static/main.css
@@ -114,7 +114,7 @@
   z-index: 1; }
 
 .l-section--offer .l-section__content-wrapper {
-  margin-left: 10%;
+  margin-left: 7%;
   width: 90%; }
 
 /* l-features-wrapper ---------------------------------------------------- */
@@ -374,6 +374,9 @@
   background-color: #ffffff;
   color: #222222;
   text-shadow: none; }
+
+.l-section--offer .button {
+  margin-left: 30px; }
 
 /* __ button--rectangle -------------------------------------------------- */
 .button--rectangle {
