Remove margin-top for feature-wrapper for large screen

--- a/src/blocks/feature/feature.scss
+++ b/src/blocks/feature/feature.scss
@@ -8,3 +8,10 @@
 .feature:first-child {
     margin-top: 0;
 }
+
+
+@media all and (min-width: 975px) {
+    .feature {
+        margin-top: 0;
+    }
+}
