--- a/src/main.scss
+++ b/src/main.scss
@@ -106,6 +106,14 @@
 /* __ list__item -------------------------------------------------- */
         @import "blocks/list/__item/list__item.scss";
 
+
+/* quotation ---------------------------------------------------- */
+    @import "blocks/quotation/quotation.scss"; 
+/* __ quotation__text -------------------------------------------------- */
+    //    @import "blocks/quotation/__text/quotation__text.scss";
+/* __ quotation__author -------------------------------------------------- */
+    //    @import "blocks/quotation/__author/quotation__author.scss";
+
 /* button  ---------------------------------------------------- */
     @import "blocks/button/button.scss"; 
 /* __ button--rectangle -------------------------------------------------- */
