--- a/static/main.css
+++ b/static/main.css
@@ -304,7 +304,14 @@
     margin-top: 0; } }
 /* __ feature__icon -------------------------------------------------- */
 .feature__icon {
-  padding-bottom: 15px; }
+  padding-bottom: 15px;
+  position: relative; }
+
+.feature__icon img {
+  width: 90px;
+  height: 90px;
+  border: 4px solid #777777;
+  border-radius: 50%; }
 
 /* __ feature__title -------------------------------------------------- */
 .feature__title {
@@ -335,6 +342,12 @@
 .list__item:last-child {
   margin-bottom: 50px; }
 
+/* quotation ---------------------------------------------------- */
+.quotation {
+  background-color: #f9f9f9; }
+
+/* __ quotation__text -------------------------------------------------- */
+/* __ quotation__author -------------------------------------------------- */
 /* button  ---------------------------------------------------- */
 .button {
   background-color: #7cc576;
