Set 'Roboto' as global font and remove from blocks

--- a/src/global/global.scss
+++ b/src/global/global.scss
@@ -14,6 +14,11 @@
     background: #7cc576;
 }
 
+body {
+    font-family: 'Roboto Slab', serif;
+    color: #777777;
+}
+
 .green-text {
     color: #7cc576;
 }
