--- a/static/main.css
+++ b/static/main.css
@@ -340,40 +340,74 @@ body {
 .list__item:last-child {
   margin-bottom: 50px; }
 
-/* quotation ---------------------------------------------------- */
-.quotation {
+/* opinion ---------------------------------------------------- */
+.opinion {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 40px; }
+
+/* __ opinion__picture -------------------------------------------------- */
+.opinion__picture {
+  width: 220px;
+  height: 220px;
+  background-color: #f9f9f9;
+  border-radius: 50%;
+  margin-right: 45px;
+  margin-left: 45px;
+  margin-bottom: 45px; }
+
+/* __ opinion__quotation -------------------------------------------------- */
+.opinion__quotation {
   background-color: #f9f9f9;
   padding: 40px;
-  width: 640px;
-  margin-bottom: 80px;
+  width: 50%;
   position: relative; }
 
-.quotation::before {
+.opinion__quotation::before {
   position: absolute;
   content: "";
   width: 0;
   height: 0;
-  top: calc(50% - 13px);
-  left: -23px;
-  border-right: 23px solid #f9f9f9;
-  border-top: 13px solid transparent;
-  border-bottom: 13px solid transparent;
-  border-left: none;
+  left: calc(50% - 13px);
+  top: -23px;
+  border-bottom: 23px solid #f9f9f9;
+  border-left: 13px solid transparent;
+  border-right: 13px solid transparent;
+  border-top: none;
   z-index: 100; }
 
-/* __ quotation__text -------------------------------------------------- */
-.quotation__text {
+/*
+
+.opinion__quotation::before {
+    position: absolute;
+    content: "";
+    width: 0;
+    height: 0;
+    top: calc(50% - 13px);
+    left: -23px;
+    border-right: 23px solid #f9f9f9;
+    border-top: 13px solid transparent;
+    border-bottom: 13px solid transparent;
+    border-left: none;
+    z-index: 100;
+}
+
+
+*/
+/* __ opinion__text -------------------------------------------------- */
+.opinion__text {
   position: relative;
   font-size: 22px;
   margin-bottom: 20px; }
 
-.quotation__text::before {
+.opinion__text::before {
   content: '" '; }
 
-.quotation__text::after {
+.opinion__text::after {
   content: ' "'; }
 
-/* __ quotation__author -------------------------------------------------- */
+/* __ opinion__author -------------------------------------------------- */
 /* button  ---------------------------------------------------- */
 .button {
   background-color: #7cc576;
