Style circle around feature icon

--- a/src/main.scss
+++ b/src/main.scss
@@ -94,6 +94,8 @@
 
 /* feature --------------------------------------------------------- */
     @import "blocks/feature/feature.scss";  
+/* __ feature__icon-circle -------------------------------------------------- */
+        @import "blocks/feature/__icon-circle/feature__icon-circle.scss";  
 /* __ feature__icon -------------------------------------------------- */
         @import "blocks/feature/__icon/feature__icon.scss";  
 /* __ feature__title -------------------------------------------------- */
