--- a/static/main.css
+++ b/static/main.css
@@ -304,16 +304,20 @@ body {
 @media all and (min-width: 975px) {
   .feature {
     margin-top: 0; } }
-/* __ feature__icon -------------------------------------------------- */
-.feature__icon {
-  padding-bottom: 15px;
-  position: relative; }
-
-.feature__icon img {
+/* __ feature__icon-circle -------------------------------------------------- */
+.feature__icon-circle {
+  margin: 0 auto 0 auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 90px;
   height: 90px;
   border: 4px solid #777777;
   border-radius: 50%; }
+
+/* __ feature__icon -------------------------------------------------- */
+.feature__icon {
+  padding-bottom: 15px; }
 
 /* __ feature__title -------------------------------------------------- */
 .feature__title {
