--- a/src/blocks/feature/__icon-circle/feature__icon-circle.scss
+++ b/src/blocks/feature/__icon-circle/feature__icon-circle.scss
@@ -7,4 +7,15 @@
     height: 90px;
     border: 4px solid #777777;
     border-radius: 50%;
+    position: relative;
+}
+
+.feature__icon-circle::after {
+    content: "";
+    position: absolute;
+    width: 170px;
+    top: calc(50% - 4px);
+    left: 115px;
+    border-bottom: 5px solid #777777;
+    
 }
