--- a/src/main.scss
+++ b/src/main.scss
@@ -96,6 +96,8 @@
     @import "blocks/feature/feature.scss";  
 /* __ feature__icon-circle -------------------------------------------------- */
         @import "blocks/feature/__icon-circle/feature__icon-circle.scss";  
+/* __>> feature__icon-circle--last -------------------------------------------------- */
+            @import "blocks/feature/__icon-circle/--last/feature__icon-circle--last.scss";
 /* __ feature__icon -------------------------------------------------- */
         @import "blocks/feature/__icon/feature__icon.scss";  
 /* __ feature__title -------------------------------------------------- */
