--- a/static/main.css
+++ b/static/main.css
@@ -313,7 +313,20 @@ body {
   width: 90px;
   height: 90px;
   border: 4px solid #777777;
-  border-radius: 50%; }
+  border-radius: 50%;
+  position: relative; }
+
+.feature__icon-circle::after {
+  content: "";
+  position: absolute;
+  width: 170px;
+  top: calc(50% - 4px);
+  left: 115px;
+  border-bottom: 5px solid #777777; }
+
+/* __>> feature__icon-circle--last -------------------------------------------------- */
+.feature__icon-circle--last::after {
+  border-bottom: none; }
 
 /* __ feature__icon -------------------------------------------------- */
 .feature__icon {
